--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "firebase": "^10.1.0",
+    "firebase-admin": "^11.10.1",
     "next": "13.4.12",
     "next-auth": "^4.22.3",
     "openai": "^3.3.0",
