--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@firebase/firestore": "^4.1.0",
     "@heroicons/react": "^2.0.18",
     "@types/node": "20.4.4",
     "@types/react": "18.2.16",
@@ -28,5 +29,9 @@
     "react-hot-toast": "^2.4.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/firebase": "^3.2.1"
   }
 }
