--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "chatgpt-2.0",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "nodemon server"
   },
   "dependencies": {
     "@firebase/firestore": "^4.1.0",
@@ -27,6 +29,8 @@
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-hot-toast": "^2.4.1",
+    "react-select": "^5.7.4",
+    "swr": "^2.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
